fixed skills icon spacing and favicon filename

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,6 +24,7 @@ a{
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+	padding: 0 10rem
   }
 
   .icons-container {
